--- a/package.json
+++ b/package.json
@@ -5,20 +5,23 @@
   "proxy": "http://localhost:5001",
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.5",
+    "@rollbar/react": "^0.12.0-beta",
     "axios": "^0.27.2",
     "bootstrap": "^5.2.0",
     "formik": "^2.2.9",
     "i18next": "^21.9.1",
-    "leo-profanity": "^1.6.0",
+    "leo-profanity": "^1.7.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
+    "react-bootstrap-icons": "^1.11.4",
     "react-dom": "^18.2.0",
     "react-i18next": "^11.18.5",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
-    "react-toastify": "^9.0.8",
-    "socket.io-client": "^4.5.2",
+    "react-toastify": "^9.1.3",
+    "rollbar": "^2.26.4",
+    "socket.io-client": "^4.7.5",
     "web-vitals": "^2.1.4",
     "yup": "^0.32.11"
   },
