--- a/package.json
+++ b/package.json
@@ -13,15 +13,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@babel/plugin-transform-private-property-in-object": "^7.25.7",
-    "@eslint/config-array": "^0.18.0",
-    "@eslint/object-schema": "^2.1.4",
-    "@hexlet/chat-server": "^2.0.4",
-    "eslint": "^9.12.0",
-    "glob": "^11.0.0",
-    "jsonwebtoken": "^9.0.2",
-    "rimraf": "^6.0.1",
-    "socket.io-client": "^4.7.5"
+    "@hexlet/chat-server": "^2.0.4"
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
