--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,7 +26,7 @@
     "yup": "^1.4.0"
   },
   "scripts": {
-    "start": "DANGEROUSLY_DISABLE_HOST_CHECK=true react-scripts start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
