--- a/frontend/package.json
+++ b/frontend/package.json
@@ -56,6 +56,7 @@
     "eslint-plugin-react": "^7.31.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "file-loader": "^6.2.0",
-    "style-loader": "^4.0.0"
+    "style-loader": "^4.0.0",
+    "webpack-bundle-analyzer": "^4.10.2"
   }
 }
