--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@hexlet/chat-server": "^2.0.4"
   },
   "devDependencies": {
+    "css-minimizer-webpack-plugin": "^7.0.0",
+    "image-webpack-loader": "^8.1.0",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^5.1.0"
   }
