--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
     "rollbar": "^2.26.4",
     "socket.io-client": "^4.7.5",
     "web-vitals": "^4.2.3",
+    "webpack-cli": "^5.1.4",
     "yup": "^1.4.0"
   },
   "scripts": {
