--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "bootstrap": "^5.2.0",
     "formik": "^2.2.9",
     "i18next": "^23.15.2",
+    "image-webpack-loader": "^8.1.0",
     "leo-profanity": "^1.7.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
