--- a/frontend/package.json
+++ b/frontend/package.json
@@ -59,6 +59,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "file-loader": "^6.2.0",
     "style-loader": "^4.0.0",
-    "webpack-bundle-analyzer": "^4.10.2"
+    "webpack-bundle-analyzer": "^4.10.2",
+    "webpack-dev-server": "^5.1.0"
   }
 }
