--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "main": "index.js",
   "scripts": {
     "build": "npm run build --prefix frontend",
-    "start-backend": "npx start-server -s ./frontend/build",
+    "start": "start-server -s ./frontend/build -p $PORT",
+    "start-backend": "npx start-server -s ./frontend/build -p 5000",
     "start-frontend": "npm start --prefix frontend",
-    "start": "npm run start-backend",
     "local-start": "concurrently \"npm run start-backend\" \"npm run start-frontend\"",
     "postinstall": "cd frontend && npm ci"
   },
