--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "start-server -s ./frontend/build -p $PORT",
     "start-backend": "npx start-server -s ./frontend/build -p 5000",
     "start-frontend": "npm start --prefix frontend",
-    "local-start": "concurrently \"npm run start-backend\" \"npm run start-frontend\"",
+    "local-start": "make start-backend",
     "postinstall": "cd frontend && npm ci"
   },
   "keywords": [],
