--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "start-backend": "npx start-server -s ./frontend/build -p 5000",
     "start-frontend": "npm start --prefix frontend",
     "local-start": "make start-backend",
-    "postinstall": "cd frontend && npm ci"
+    "postinstall": "cd frontend && npm install"
   },
   "keywords": [],
   "author": "",
