--- a/package.json
+++ b/package.json
@@ -5,11 +5,11 @@
   "main": "index.js",
   "scripts": {
     "build": "npm run build --prefix frontend",
-    "start": "PORT=5000 start-server -s ./frontend/build",
-    "start-backend": "PORT=5000 npx start-server -s ./frontend/build -p 5000",
+    "start-backend": "npx start-server -s ./frontend/build",
     "start-frontend": "npm start --prefix frontend",
-    "local-start": "make start-backend",
-    "postinstall": "cd frontend && npm install"
+    "start": "npm run start-backend",
+    "local-start": "concurrently \"npm run start-backend\" \"npm run start-frontend\"",
+    "postinstall": "cd frontend && npm ci"
   },
   "keywords": [],
   "author": "",
